--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "date-fns": "^2.30.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
